2024-01-30T00:30:10Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7704418576 # 69
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-30
* notice: last 14d: unq all: 4 28
* notice: prev accum: outdated-unq outdated-all / unq all: 311 655 / 327 682
* notice: next accum: outdated-unq outdated-all / unq all: 311 655 / 327 683
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [] / [2024-01-29]

2024-01-29T16:07:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7698969933 # 68
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-29
* notice: last 14d: unq all: 4 27
* notice: prev accum: outdated-unq outdated-all / unq all: 311 655 / 327 681
* notice: next accum: outdated-unq outdated-all / unq all: 311 655 / 327 682
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-01-29]

2024-01-29T08:08:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7692958554 # 67
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-29
* notice: last 14d: unq all: 4 26
* notice: prev accum: outdated-unq outdated-all / unq all: 311 655 / 326 680
* notice: next accum: outdated-unq outdated-all / unq all: 311 655 / 327 681
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-29]

2024-01-28T16:06:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7686898566 # 65