@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-30T00:30:10Z",
+  "timestamp" : "2024-01-30T08:08:26Z",
   "count_outdated" : 655,
   "uniques_outdated" : 311,
-  "count" : 683,
-  "uniques" : 327,
+  "count" : 684,
+  "uniques" : 328,
   "clones" : [
     {
       "timestamp": "2024-01-17T00:00:00Z",
@@ -118,6 +118,15 @@
       "count": 3,
       "count_minmax": [ 1, 3 ],
       "count_decinc": [ 0, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
