@@ -1,3 +1,12 @@
+2024-01-30T08:08:26Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7708071571 # 70
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-30
+* notice: last 14d: unq all: 4 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 311 655 / 327 683
+* notice: next accum: outdated-unq outdated-all / unq all: 311 655 / 328 684
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-01-30]
+
 2024-01-30T00:30:10Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7704418576 # 69
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-30
